force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/Apttus_Config2__CustomerPurchaseOrder__c.object-meta.xml
<CustomObject>
    <description>Represents a Purchase Order associated with an account</description>
    <label>Customer Purchase Order</label>
    <nameField>
        <displayFormat>PO-{00000000}</displayFormat>
        <label>PO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>