force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__AccountName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AccountName__c</fullName>
    <description>The Account name as received from external system.</description>
    <inlineHelpText>The Account name as received from external system.</inlineHelpText>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>