force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__BilltoAccountName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BilltoAccountName__c</fullName>
    <description>The Bill To Account name as received from external system</description>
    <inlineHelpText>The Bill To Account name as received from external system</inlineHelpText>
    <label>Bill to Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>