force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__BillToAccountRefId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillToAccountRefId__c</fullName>
    <description>The External account reference that will be used as bill-to-account for orders generated from the purchase order</description>
    <externalId>true</externalId>
    <inlineHelpText>External account reference that will be used as bill-to-account for orders generated from the purchase order</inlineHelpText>
    <label>Bill To Account Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>