force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__BillToPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillToPostalCode__c</fullName>
    <description>The bill to postal or ZIP code</description>
    <inlineHelpText>The bill to postal or ZIP code</inlineHelpText>
    <label>Bill To Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>