force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__ContactId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the contact associated with the purchase order</description>
    <inlineHelpText>ID of the contact associated with the purchase order</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Purchase Orders</relationshipLabel>
    <relationshipName>CustomerPurchaseOrders</relationshipName>
    <type>Lookup</type>
</CustomField>