force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__ContactName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContactName__c</fullName>
    <description>The Contact name as received from external system</description>
    <inlineHelpText>The Contact name as received from external system</inlineHelpText>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>