force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContactPhone__c</fullName>
    <description>The Contact phone number</description>
    <inlineHelpText>The Contact phone number</inlineHelpText>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>