force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__ContactRefId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContactRefId__c</fullName>
    <description>The External contact reference</description>
    <externalId>true</externalId>
    <inlineHelpText>The External contact reference</inlineHelpText>
    <label>Contact Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>