force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__IsTaskPending__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsTaskPending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether there are any tasks pending for the order</description>
    <inlineHelpText>Indicates whether there are any tasks pending for the order</inlineHelpText>
    <label>Is Task Pending</label>
    <type>Checkbox</type>
</CustomField>