force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__PODate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PODate__c</fullName>
    <description>The purchase order date</description>
    <inlineHelpText>Date on which the purchase order was issued</inlineHelpText>
    <label>PO Date</label>
    <type>DateTime</type>
</CustomField>