force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__PriceListId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceListId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the price list associated with the purchase order</description>
    <inlineHelpText>ID of the price list associated with the purchase order</inlineHelpText>
    <label>Price List</label>
    <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
    <relationshipLabel>Customer Purchase Orders</relationshipLabel>
    <relationshipName>CustomerPurchaseOrders</relationshipName>
    <type>Lookup</type>
</CustomField>