force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__PriceListName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceListName__c</fullName>
    <description>The Price List name as received from external system.</description>
    <inlineHelpText>The Price List name as received from external system.</inlineHelpText>
    <label>Price List Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>