force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__PurchaseOrderTotal__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PurchaseOrderTotal__c</fullName>
    <description>The Total amount authorized in the purchase order</description>
    <inlineHelpText>The Total amount authorized in the purchase order</inlineHelpText>
    <label>Purchase Order Total</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>