force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__ReferencePONumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ReferencePONumber__c</fullName>
    <description>The Reference PO number from the external system</description>
    <externalId>true</externalId>
    <inlineHelpText>The Reference PO number from the external system</inlineHelpText>
    <label>Reference PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>