force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__SalesOrderTotal__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SalesOrderTotal__c</fullName>
    <description>The Total amount for which sales orders have already been created and confirmed</description>
    <inlineHelpText>The Total amount for which sales orders have already been created and confirmed</inlineHelpText>
    <label>Sales Order Total</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>