force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__ShipToAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShipToAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the ship to account associated with the purchase order</description>
    <inlineHelpText>ID of the ship to account associated with the purchase order</inlineHelpText>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Purchase Orders (Ship To)</relationshipLabel>
    <relationshipName>CustomerPurchaseOrdersShipTo</relationshipName>
    <type>Lookup</type>
</CustomField>