force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__ShiptoPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShiptoPostalCode__c</fullName>
    <description>The ship to postal or ZIP code</description>
    <inlineHelpText>The ship to postal or ZIP code</inlineHelpText>
    <label>Ship to Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>