force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_Config2__Validate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Validate__c</fullName>
    <description>Validates the purchase order</description>
    <formula>IF (ISPICKVAL(Apttus_Config2__Status__c, &quot;In Amendment&quot;), HYPERLINK(&quot;/apex/Apttus_Config2__CustomerPOValidateEnrich?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Config2__Button_ValidateCPO&quot;, &quot;ValidateCPO&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate</label>
    <type>Text</type>
</CustomField>