force-app/main/default/objects/Apttus_Config2__CustomerPurchaseOrder__c/fields/Apttus_QPConfig__ProposalId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__ProposalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the quote/proposal associated with the purchase order</description>
    <inlineHelpText>ID of the quote/proposal associated with the purchase order</inlineHelpText>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Customer Purchase Orders</relationshipLabel>
    <relationshipName>CustomerPurchaseOrders</relationshipName>
    <type>Lookup</type>
</CustomField>